# contract-review-agent

./: .gitignore  explore.py  main.py  notebook.ipynb  pyproject.toml  test.py  train.py  ui.py
ai_agents/: planner.py  researcher.py
data/: qdrant.py  retrieve_qdrant.py  upsert_qdrant.py
documents/contracts/: employment-contract.docx  landscaping-contract.docx  loan-agreement-template.docx  marketing-agreement.docx  month-to-month-rental-agreement.docx  painting-contract.docx  web-design-contracts.docx
documents/regulatories/: Law_Insider__ex-1010-5-dex1010htm-manufacturing-and-supply-agreement-text-omitted-and-filed-separately-with_Filed_05-05-2020_Contract.docx  Law_Insider_horizon-pharma-inc_manufacturing-supply-agreement_Filed_03-08-2010_Contract.docx  Law_Insider_horizon-pharma-inc_manufacturing-supply-agreement_Filed_21-10-2010_Contract.docx
documents/review-example/: ContractReviewReportTemplate.docx
notebooks/: planner_agent.ipynb  summarizer.ipynb
qdrant_storage/: raft_state.json
services/: serper.py
tools/: review_tools.py  search_tools.py
utils/: extractors.py  files.py  hybrid_vectorize.py  retrieve.py  vectorize.py
